small fix for jumping icons in feature section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -260,7 +260,7 @@ a {
       }
 
       .feature-buttons__p {
-        font-size: 0;
+        font-size: 0.1rem;
         opacity: 0;
         margin-top: 0rem;
       }
